--- a/src/common/components/Button/Button.module.css
+++ b/src/common/components/Button/Button.module.css
@@ -1,52 +1,73 @@
-.button {
-  border: none;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  cursor: pointer;
-  background-color: transparent;
+._ {
+    border: none;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    cursor: pointer;
+    background-color: transparent;
 }
-.button_theme-blue {
-  border-radius: 0.25rem;
-  background-color: var(--color-style-blue);
-  color: var(--color-style-white);
-  stroke: var(--color-style-white);
-  fill: var(--color-style-white);
+
+.blue {
+    border-radius: 0.25rem;
+    background-color: var(--color-style-blue);
+    color: var(--color-style-white);
 }
-.button_theme-blue-transparent {
-  color: var(--color-style-blue);
-  stroke: var(--color-style-blue);
-  fill: var(--color-style-blue);
+
+.blue .icon {
+    stroke: var(--color-style-white);
+    fill: var(--color-style-white);
 }
-.button_theme-black-transparent {
-  color: var(--color-style-black);
-  fill: var(--color-style-black);
-  stroke: var(--color-style-black);
+
+.blueTransparent {
+    color: var(--color-style-blue);
 }
-.button_theme-red {
-  background-color: var(--color-style-red);
-  border-radius: 0.25rem;
-  color: var(--color-style-white);
-  stroke: var(--color-style-white-day-night);
-  fill: var(--color-style-white-day-night);
+
+.blueTransparent .icon {
+    stroke: var(--color-style-blue);
+    fill: var(--color-style-blue);
 }
-.button_size_medium {
-  height: 2rem;
-  padding: 0.5rem 1rem;
-  gap: 0.5rem;
+
+.blackTransparent {
+    color: var(--color-style-black);
 }
-.button_size_small {
-  height: 1.5rem;
-  padding: 0.25rem 0.5rem;
-  gap: 0.25rem;
+
+.blackTransparent .icon {
+    fill: var(--color-style-black);
+    stroke: var(--color-style-black);
 }
-.button_size_medium.button_icon-only {
-  padding: 0.5rem;
+
+.red {
+    background-color: var(--color-style-red);
+    border-radius: 0.25rem;
+    color: var(--color-style-white);
 }
-.button_size_small.button_icon-only {
-  padding: 0.25rem;
+
+.red .icon {
+    stroke: var(--color-style-white-day-night);
+    fill: var(--color-style-white-day-night);
 }
-.button_large {
-  height: 2rem;
+
+.medium {
+    height: 2rem;
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
+}
+
+.small {
+    height: 1.5rem;
+    padding: 0.25rem 0.5rem;
+    gap: 0.25rem;
+}
+
+.medium.iconOnly {
+    padding: 0.5rem;
+}
+
+.small.iconOnly {
+    padding: 0.25rem;
+}
+
+.large {
+    height: 2rem;
 }
