--- a/src/modules/Filters/Filters.module.css
+++ b/src/modules/Filters/Filters.module.css
@@ -1,45 +1,66 @@
 ._ {
-    display: flex;
-    align-items: flex-end;
-    padding: 1rem;
-    gap: 1rem;
-    width: 100%;
-    height: 5.5rem;
+  display: flex;
+  align-items: flex-end;
+  padding: 1rem;
+  gap: 1rem;
+  width: 100%;
+  height: 5.5rem;
+  background-color: var(--color-style-white-blue);
+  border-radius: 0.5rem;
 }
 
-.filters__date-registration {
-    display: flex;
-    align-items: flex-end;
-    gap: 0.5rem;
-    width: 18rem;
+.registration {
+  display: flex;
+  align-items: flex-end;
+  gap: 0.5rem;
+  width: 18rem;
 }
 
-.filters__date-registration .input {
-    flex-basis: 50%;
+.registration .input {
+  flex-basis: 50%;
 }
 
-.filters__order-amount {
-    display: flex;
-    align-items: flex-end;
-    gap: 0.5rem;
-    width: 16rem;
+.amount {
+  display: flex;
+  align-items: flex-end;
+  gap: 0.5rem;
+  width: 16rem;
 }
 
-.filters__order-amount .input {
-    flex-basis: 50%;
+.amount .input {
+  flex-basis: 50%;
 }
 
-.filters__order-status {
-    position: relative;
-    width: 12rem;
+.multipleStatus {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0.5rem 0;
+  width: 10rem;
+  background-color: var(--color-style-white);
+  box-shadow: var(--dropdown-box-shadow);
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  color: var(--color-style-black);
+  z-index: 2;
 }
 
-.filters__order-status .multiple-status {
-    display: none;
-    position: absolute;
-    right: 0;
+.orderStatus {
+  position: relative;
+  width: 12rem;
 }
 
-.filters__order-status .input:hover + .multiple-status {
-    display: flex;
+.orderStatus .multipleStatus {
+  display: none;
+  position: absolute;
+  right: 0;
+}
+
+.orderStatus:hover .multipleStatus {
+  display: flex;
+}
+
+.multipleStatus .checkbox {
+  align-self: stretch;
+  padding: 0.5rem 0 0.5rem 1rem;
 }
