--- a/src/modules/Search/Search.module.css
+++ b/src/modules/Search/Search.module.css
@@ -1,28 +1,26 @@
-.search {
+._ {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 1rem;
   width: 100%;
 }
-.search__top-panel {
+
+.topPanel {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 2rem;
 }
-.search__search-wrapper {
+
+.searchContainer {
   display: flex;
   align-items: flex-start;
   gap: 0.5rem;
   width: 38rem;
 }
-.search__search-wrapper .searchbar {
+
+.searchContainer .searchbar {
   flex-grow: 1;
-}
-.search__hidden-panel {
-  background-color: var(--color-style-white-blue);
-  border-radius: 0.5rem;
-  width: 100%;
 }
