--- a/src/shared/components/Checkbox/Checkbox.module.css
+++ b/src/shared/components/Checkbox/Checkbox.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
 }
 
 ._:hover {
@@ -11,7 +11,6 @@
 
 .area {
   appearance: none;
-  margin: 0 5px 0 0;
   width: 1rem;
   height: 1rem;
   background-color: var(--color-style-white);
@@ -20,7 +19,18 @@
   box-sizing: border-box;
 }
 
+.icon {
+  position: absolute;
+  top: 0.5rem;
+  left: 1rem;
+  width: 1rem;
+  fill: var(--color-style-white);
+  opacity: 0;
+}
+
 .text {
+  margin-left: 0.5rem;
+
   color: var(--color-style-black);
 }
 
@@ -35,13 +45,4 @@
 
 .area:checked + .icon {
   opacity: 1;
-}
-
-.icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1rem;
-  fill: var(--color-style-white);
-  opacity: 0;
 }
