--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,12 @@
   margin: 0;
   padding: 0;
 }
+
 html,
 body {
   height: 100%;
 }
+
 body {
   background-color: var(--color-style-white);
   font-family: "Ubuntu", sans-serif;
@@ -30,7 +32,7 @@ body {
     0 0 1rem rgba(0, 0, 0, 0.15), 0 0 0.25rem rgba(0, 0, 0, 0.1);
 }
 
-:root {
+:root[data-theme="light"] {
   --color-style-black: #000000;
   --color-style-white: #ffffff;
   --color-style-light-blue: #bad8f5;
@@ -40,7 +42,7 @@ body {
     0 0.25rem 0.5rem rgba(0, 0, 0, 0.1), 0 0.125rem 0.125rem rgba(0, 0, 0, 0.1);
 }
 
-.theme-night {
+:root[data-theme="night"] {
   --color-style-black: #bcc4cc;
   --color-style-white: #2b2d33;
   --color-style-light-blue: #454e52;
