--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html,
-body {
-  height: 100%;
-}
-
-body {
-  background-color: var(--color-style-white);
-  font-family: "Ubuntu", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.8125rem;
-  line-height: 1rem;
-}
-
-/*   ----- Color Styles -----------------------------------------------------------------    */
 :root {
   --color-style-red: #f53152;
   --color-style-orange: #ff8c56;
@@ -52,7 +31,19 @@ body {
     0 0.375rem 0.75rem rgba(0, 0, 0, 0.3), 0 0.25rem 0.25rem rgba(0, 0, 0, 0.4);
 }
 
-/*   ----- Text Styles --------------------------------------------------------------------    */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Ubuntu", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.8125rem;
+  line-height: 1rem;
+  background-color: var(--color-style-white);
+}
+
 .headline-font {
   font-family: "Ubuntu", sans-serif;
   font-style: normal;
@@ -70,6 +61,7 @@ body {
   line-height: 16px;
 }
 
+/*   ----- Scrollbar --------------------------------------------------------------------    */
 .scrollbar {
   width: 0.5rem;
 }
