--- a/src/shared/components/Checkbox/Checkbox.module.css
+++ b/src/shared/components/Checkbox/Checkbox.module.css
@@ -24,13 +24,12 @@
   top: 0;
   left: 0;
   width: 1rem;
-  fill: var(--color-style-white);
+  fill: var(--color-style-white-day-night);
   opacity: 0;
 }
 
 .text {
   margin-left: 0.5rem;
-
   color: var(--color-style-black);
 }
 
