--- a/src/shared/components/Dropdown/Dropdown.module.css
+++ b/src/shared/components/Dropdown/Dropdown.module.css
@@ -1,2 +1,19 @@
 ._ {
+	position: relative;
+}
+
+.overlay {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 1rem;
+	gap: 0.5rem;
+	width: 10rem;
+	background-color: var(--color-style-white);
+	box-shadow: var(--dropdown-box-shadow);
+	border-radius: 0.5rem;
+	box-sizing: border-box;
+	color: var(--color-style-black);
+	z-index: 2;
 }
