--- a/src/modules/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/src/modules/ThemeSwitcher/ThemeSwitcher.module.css
@@ -1,10 +1,11 @@
 ._ {
-  position: relative;
+	top: 1.7rem;
+	right: 0;
+	align-items: center;
+	gap: 0.5rem;
+	padding: 1rem;
 }
 
-._ .theme-switcher {
-  display: none;
-  position: absolute;
-  top: 1.7rem;
-  right: 0;
+._ .button {
+	align-self: stretch;
 }
