--- a/src/AdminPage/AdminPage.module.css
+++ b/src/AdminPage/AdminPage.module.css
@@ -5,9 +5,8 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 2rem;
-  width: 100rem;
+  width: 100vw;
   height: 100vh;
-  box-shadow: 0 2rem 8rem rgba(0, 0, 0, 0.3), 0 1rem 2rem rgba(0, 0, 0, 0.3), 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
   margin: 0 auto;
   padding: 2rem 3rem 0;
 }
