--- a/src/modules/Filters/Filters.module.css
+++ b/src/modules/Filters/Filters.module.css
@@ -42,3 +42,15 @@
   align-self: stretch;
   padding: 0.5rem 0 0.5rem 1rem;
 }
+
+.multiple {
+  height: 1rem;
+  width: 1rem;
+  transform: rotate(90deg);
+  stroke: var(--color-style-light-blue);
+  fill: var(--color-style-light-blue);
+}
+
+.multiple:hover {
+  transform: rotate(0deg);
+}
