--- a/src/AdminPage/AdminPage.module.css
+++ b/src/AdminPage/AdminPage.module.css
@@ -1,12 +1,9 @@
 ._ {
-  position: relative;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 2rem;
-  width: 100vw;
+  min-width: 66rem;
   height: 100vh;
   margin: 0 auto;
-  padding: 2rem 3rem 0;
+  padding: 2rem 3rem 0 3rem;
 }
