--- a/src/modules/Filter/Filter.module.css
+++ b/src/modules/Filter/Filter.module.css
@@ -1,7 +1,6 @@
 ._ {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   gap: 1rem;
-  width: 100%;
+  padding-bottom: 2rem;
 }
