--- a/src/modules/Table/Table.module.css
+++ b/src/modules/Table/Table.module.css
@@ -2,8 +2,6 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  max-height: calc(100vh - 16.7rem);
-  align-self: end;
+  flex-grow: 1;
+  overflow: hidden;
 }
