--- a/src/modules/Table/TableBody/TableBody.module.css
+++ b/src/modules/Table/TableBody/TableBody.module.css
@@ -1,11 +1,7 @@
 ._ {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: calc(100% - 0.25rem);
-  height: 100%;
-  min-height: 10rem;
+  flex: 1;
   color: var(--color-style-black);
   overflow-y: auto;
 }
