--- a/src/shared/components/Table/TableRow/TableRow.module.css
+++ b/src/shared/components/Table/TableRow/TableRow.module.css
@@ -6,3 +6,7 @@
   width: 100%;
   border-bottom: 0.0625rem solid var(--color-style-white-blue);
 }
+
+/*._:hover {*/
+/*  background: var(--color-style-shade-background);*/
+/*}*/
